<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="16dp"
        android:scaleType="fitXY"
        android:src="@drawable/logo_search_friend"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_dogRandom"
        android:layout_width="95dp"
        android:layout_height="90dp"
        android:layout_marginTop="34dp"
        android:background="@drawable/circlet_gray"
        android:paddingTop="35dp"
        android:text="@string/home_tv_random"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_all_dogs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/tv_all_dogs"
        android:layout_width="95dp"
        android:layout_height="90dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/circlet_black"
        android:paddingTop="35dp"
        android:text="@string/home_tv_all_dogs"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_dogRandom"
        app:layout_constraintEnd_toStartOf="@+id/tv_us" />

    <TextView
        android:id="@+id/tv_us"
        android:layout_width="95dp"
        android:layout_height="90dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/circlet_gray"
        android:paddingTop="35dp"
        android:text="@string/home_tv_us"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_all_dogs"
        app:layout_constraintEnd_toStartOf="@+id/tv_search" />

    <TextView
        android:id="@+id/tv_search"
        android:layout_width="95dp"
        android:layout_height="90dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/cieclet_orange"
        android:paddingTop="35dp"
        android:text="@string/home_tv_search"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_us"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_adopt_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="34dp"
        android:text="Adopt Me"
        android:textAlignment="center"
        android:textColor="@color/orange"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dogRandom" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_adopt_me"
        tools:listitem="@layout/item_dogs" />

    <include
        android:id="@+id/pb_loading"
        layout="@layout/loading"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_adopt_me" />

</androidx.constraintlayout.widget.ConstraintLayout>